--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       - "v*"
 
 jobs:
+  build-all:
+    uses: ./.github/workflows/build.yml
+
   pre-release:
     name: "Pre Release"
     runs-on: "ubuntu-latest"
@@ -13,79 +16,14 @@ jobs:
       # Checkout
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: master
+
       - name: Fix cargo config
         run: sed -e "s/.*replace-with.*//g" -i .cargo/config
 
-      # Nodejs
-      - name: Setup Nodejs
-        uses: actions/setup-node@v1
+      - name: Download all
+        uses: actions/download-artifact@v3
         with:
-          node-version: "12.x"
-      # Nodejs dependencies
-      - run: npm install
-        working-directory: electron
-      # Nodejs build web
-      - run: npm run build:web
-        working-directory: electron
-
-      # Rust musl cross toolchain
-      - name: Rust musl cross toolchain arm
-        run: |
-          if ! test -d /opt/arm-linux-musleabi-cross/bin; then
-            wget https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabi-cross.tgz
-            tar -xvf arm-linux-musleabi-cross.tgz
-            mv arm-linux-musleabi-cross /opt/
-          fi
-          echo /opt/arm-linux-musleabi-cross/bin >> $GITHUB_PATH
-      - name: Rust musl cross toolchain armhf
-        run: |
-          if ! test -d /opt/arm-linux-musleabihf-cross/bin; then
-            wget https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabihf-cross.tgz
-            tar -xvf arm-linux-musleabihf-cross.tgz
-            mv arm-linux-musleabihf-cross /opt/
-          fi
-          echo /opt/arm-linux-musleabihf-cross/bin >> $GITHUB_PATH
-      - name: Rust musl cross toolchain aarch64
-        run: |
-          if ! test -d /opt/aarch64-linux-musl-cross/bin; then
-            wget https://more.musl.cc/$(uname -m)-linux-musl/aarch64-linux-musl-cross.tgz
-            tar -xvf aarch64-linux-musl-cross.tgz
-            mv aarch64-linux-musl-cross /opt/
-          fi
-          echo /opt/aarch64-linux-musl-cross/bin >> $GITHUB_PATH
-      # Fix libgcc.a for aarch64
-      - run: |
-          LIBGCC=$(find /opt/aarch64-linux-musl-cross -name libgcc.a)
-          echo $LIBGCC
-          sed -e "s|\"/opt/aarch64-linux-musl-cross/.*\"|\"${LIBGCC%/*}\"|" -i .cargo/config
-          cat .cargo/config
-
-      # Rust toolchain
-      - name: Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-
-      # Rust build release
-      - run: |
-          sudo apt update && sudo apt install -y rpm
-          cargo install cargo-deb
-          cargo install cargo-rpm
-          for arch in arm-unknown-linux-musleabi arm-unknown-linux-musleabihf aarch64-unknown-linux-musl x86_64-unknown-linux-gnu; do
-            rustup target add $arch
-            cargo build --target $arch --release
-            for app in server poweroff programmer; do
-              cargo deb --target $arch --manifest-path=pisugar-$app/Cargo.toml
-              (cd pisugar-$app && cargo rpm build --target $arch)
-            done
-          done
-      # aur for archlinux
-      - run: (cd scripts/aur; sh build-aur.sh)
-
-      - run: find $(pwd) -name '*.deb'
-      - run: find $(pwd) -name '*.rpm'
+          name: pisugar-all
 
       # Upload artifact
       - name: Upload artifacts
@@ -134,13 +72,11 @@ jobs:
           sudo apt-get install -y unzip
 
           if [ $(uname -m) == 'x86_64' ]; then
-            wget http://devtools.qiniu.com/qshell-linux-x64-v2.4.1.zip
-            unzip qshell-linux-x64-v2.4.1.zip
-            mv qshell-linux-x64-v2.4.1 qshell
+            wget https://devtools.qiniu.com/qshell-v2.7.0-linux-amd64.tar.gz
+            tar -xvf qshell-v2.7.0-linux-amd64.tar.gz
           else
-            wget http://devtools.qiniu.com/qshell-linux-x86-v2.4.1.zip
-            unzip qshell-linux-x86-v2.4.1.zip
-            mv qshell-linux-x86-v2.4.1 qshell
+            wget https://devtools.qiniu.com/qshell-v2.7.0-linux-386.tar.gz
+            tar -xvf qshell-v2.7.0-linux-386.tar.gz
           fi
           chmod +x qshell
           ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
