--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -29,7 +29,7 @@ futures-util = "0.3.5"
 futures-channel = "0.3.5"
 hyper = {version ="0.14.10", features = ["client", "server", "tcp"]}
 hyper-staticfile = "0.8"
-hyper-websocket-lite = "0.5"
+hyper-tungstenite = "0.8"
 websocket-codec = "0.5"
 digest_auth = "0.3.0"
 pisugar-core = { path = "../pisugar-core" }
