--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,16 +31,11 @@ jobs:
         with:
           name: pisugar-artifacts
           path: |
-            target/arm-unknown-linux-musleabi/debian/*
-            target/arm-unknown-linux-musleabihf/debian/*
-            target/aarch64-unknown-linux-musl/debian/*
-            target/x86_64-unknown-linux-gnu/debian/*
-            target/arm-unknown-linux-musleabi/release/rpmbuild/RPMS/armv7l/*
-            target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
-            target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
-            target/x86_64-unknown-linux-gnu/release/rpmbuild/RPMS/x86_64/*
-            scripts/*
+            target/**/*.deb
+            target/**/*.rpm
+            scripts/*.sh
             scripts/aur/*.tar.gz
+            !scripts/update-version.sh
           if-no-files-found: warn
 
       # Draft Release
@@ -50,16 +45,11 @@ jobs:
           prerelease: false
           draft: true
           files: |
-            target/arm-unknown-linux-musleabi/debian/*
-            target/arm-unknown-linux-musleabihf/debian/*
-            target/aarch64-unknown-linux-musl/debian/*
-            target/x86_64-unknown-linux-gnu/debian/*
-            target/arm-unknown-linux-musleabi/release/rpmbuild/RPMS/armv7l/*
-            target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
-            target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
-            target/x86_64-unknown-linux-gnu/release/rpmbuild/RPMS/x86_64/*
-            scripts/*
+            target/**/*.deb
+            target/**/*.rpm
+            scripts/*.sh
             scripts/aur/*.tar.gz
+            !scripts/update-version.sh
 
       # Upload QiNiu nightly
       - name: "Upload to QiNiu"
