--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,15 +42,15 @@ jobs:
     strategy:
       matrix:
         target:
-          - aarch64-unknown-linux-gnu
+          # - aarch64-unknown-linux-gnu
           - aarch64-unknown-linux-musl
-          - arm-unknown-linux-gnueabi
-          - arm-unknown-linux-gnueabihf
+          # - arm-unknown-linux-gnueabi
+          # - arm-unknown-linux-gnueabihf
           - arm-unknown-linux-musleabi
           - arm-unknown-linux-musleabihf
-          - i686-unknown-linux-gnu
-          - i686-unknown-linux-musl
-          - riscv64gc-unknown-linux-gnu
+          # - i686-unknown-linux-gnu
+          # - i686-unknown-linux-musl
+          # - riscv64gc-unknown-linux-gnu
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
     steps:
