--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,13 @@ jobs:
           - aarch64-unknown-linux-musl
           # - arm-unknown-linux-gnueabi
           # - arm-unknown-linux-gnueabihf
-          - arm-unknown-linux-musleabi
-          - arm-unknown-linux-musleabihf
+          # - arm-unknown-linux-musleabi
+          # - arm-unknown-linux-musleabihf
           # - i686-unknown-linux-gnu
           # - i686-unknown-linux-musl
           # - riscv64gc-unknown-linux-gnu
-          - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-musl
+          # - x86_64-unknown-linux-gnu
+          # - x86_64-unknown-linux-musl
     steps:
       # Checkout
       - name: Checkout
