--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Fix cargo config
-        run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+        run: sed -e "s/.*replace-with.*//g" -i .cargo/config || true
 
       # Download web
       - name: Download web
