--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,11 +8,15 @@ jobs:
   build-web:
     uses: ./.github/workflows/build-web.yml
   build-musl:
-    needs: [build-web]
+    needs:
+      - build-web
     uses: ./.github/workflows/build-musl.yml
   build-gnu:
-    needs: [build-web]
+    needs:
+      - build-web
     uses: ./.github/workflows/build-gnu.yml
   build-other:
-    needs: [build-musl, build-gnu]
+    needs:
+      - build-musl
+      - build-gnu
     uses: ./.github/workflows/build-other.yml
