--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,18 +9,24 @@ jobs:
   build-web:
     uses: ./.github/workflows/build-web.yml
   build-musl:
-    needs: [build-web]
+    needs:
+      - build-web
     uses: ./.github/workflows/build-musl.yml
   build-gnu:
-    needs: [build-web]
+    needs:
+      - build-web
     uses: ./.github/workflows/build-gnu.yml
   build-other:
-    needs: [build-musl, build-gnu]
+    needs:
+      - build-musl
+      - build-gnu
     uses: ./.github/workflows/build-other.yml
 
   pre-release:
     name: "Pre Release"
     runs-on: "ubuntu-latest"
+    needs:
+      - build-other
     steps:
       # Checkout
       - name: Checkout
