--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -20,7 +20,7 @@ jobs:
           - mips-unknown-linux-gnu
           - mips64-unknown-linux-gnuabi64
           - mips64el-unknown-linux-gnuabi64
-          - mipsel-unknown-linux-gnu
+          #- mipsel-unknown-linux-gnu not work
           - powerpc-unknown-linux-gnu
           - powerpc64-unknown-linux-gnu
           - powerpc64le-unknown-linux-gnu
@@ -70,6 +70,8 @@ jobs:
 
       # Rust cache
       - uses: Swatinem/rust-cache@v1
+        with:
+          cache-on-failure: true
 
       - name: Rust toolchain
         uses: actions-rs/toolchain@v1
