--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -29,7 +29,7 @@ jobs:
           #- sparc64-unknown-linux-gnu
           #- thumbv7neon-unknown-linux-gnueabihf
           - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-gnux32
+          #- x86_64-unknown-linux-gnux32
     steps:
       # Checkout
       - name: Checkout
