--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,7 +18,7 @@ jobs:
   build-other:
     needs:
       - build-musl
-      - build-gnu
+      #- build-gnu
     uses: ./.github/workflows/build-other.yml
 
   dev-release:
