--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
   build-other:
     needs:
       - build-musl
-      - build-gnu
+      #- build-gnu
     uses: ./.github/workflows/build-other.yml
 
   pre-release:
