--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,10 +11,10 @@ jobs:
     needs:
       - build-web
     uses: ./.github/workflows/build-musl.yml
-  build-gnu:
-    needs:
-      - build-web
-    uses: ./.github/workflows/build-gnu.yml
+  #build-gnu:
+  #  needs:
+  #    - build-web
+  #  uses: ./.github/workflows/build-gnu.yml
   build-other:
     needs:
       - build-musl
