ci: fix github action

--- a/.github/workflows/build-other.yml
+++ b/.github/workflows/build-other.yml
@@ -28,7 +28,7 @@ jobs:
           mkdir -p target
           for i in $(ls download); do
             mv -f download/$i/* target/
-          fi
+          done
 
       - run: ls -r target
 
