--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -51,6 +51,7 @@ jobs:
           name: pisugar-amd64
           path: |
             target
+            !target/*
             !target/**/.fingerprint
             !target/**/*.d
             !target/**/build
@@ -120,6 +121,7 @@ jobs:
           name: pisugar-arm
           path: |
             target
+            !target/*
             !target/**/.fingerprint
             !target/**/*.d
             !target/**/build
@@ -189,6 +191,7 @@ jobs:
           name: pisugar-armhf
           path: |
             target
+            !target/*
             !target/**/.fingerprint
             !target/**/*.d
             !target/**/build
@@ -264,6 +267,7 @@ jobs:
           name: pisugar-aarch64
           path: |
             target
+            !target/*
             !target/**/.fingerprint
             !target/**/*.d
             !target/**/build
