--- a/pisugar-poweroff/Cargo.toml
+++ b/pisugar-poweroff/Cargo.toml
@@ -17,6 +17,9 @@ pisugar-core = { path = "../pisugar-core" }
 [[bin]]
 name = "pisugar-poweroff"
 
+[profile.release]
+strip = true
+
 [package.metadata.deb]
 license-file = ["../LICENSE", "0"]
 copyright = "2020, PiSugar team"
