--- a/pisugar-programmer/Cargo.toml
+++ b/pisugar-programmer/Cargo.toml
@@ -15,6 +15,9 @@ sysinfo = "0.23"
 [[bin]]
 name = "pisugar-programmer"
 
+[profile.release]
+strip = true
+
 [package.metadata.deb]
 license-file = ["../LICENSE", "0"]
 copyright = "2020, PiSugar team"
