--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -37,6 +37,9 @@ pisugar-core = { path = "../pisugar-core" }
 [[bin]]
 name = "pisugar-server"
 
+[profile.release]
+strip = true
+
 [package.metadata.deb]
 license-file = ["../LICENSE", "0"]
 copyright = "2020, PiSugar team"
