--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Fix cargo config
-        run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+        run: sed -e "s/.*replace-with.*//g" -i .cargo/config.toml
 
       - name: Download all
         uses: actions/download-artifact@v3
@@ -62,7 +62,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y unzip
-          
+
           if [ $(uname -m) == 'x86_64' ]; then
             wget https://devtools.qiniu.com/qshell-v2.7.0-linux-amd64.tar.gz
             tar -xvf qshell-v2.7.0-linux-amd64.tar.gz
@@ -72,7 +72,7 @@ jobs:
           fi
           chmod +x qshell
           ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
-          
+
           for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm') $(find scripts -name '*.tar.gz'); do
             filename=${f##*/}
             key=nightly/${filename}
