--- a/.github/workflows/build-gnu.yml
+++ b/.github/workflows/build-gnu.yml
@@ -17,19 +17,19 @@ jobs:
           #- armv7-unknown-linux-gnueabi
           #- armv7-unknown-linux-gnueabihf
           #- i586-unknown-linux-gnu
-          # - i686-unknown-linux-gnu
+          - i686-unknown-linux-gnu
           #- mips-unknown-linux-gnu
           #- mips64-unknown-linux-gnuabi64
           #- mips64el-unknown-linux-gnuabi64
           #- mipsel-unknown-linux-gnu not work
-          # - powerpc-unknown-linux-gnu
-          # - powerpc64-unknown-linux-gnu
-          # - powerpc64le-unknown-linux-gnu
-          # - riscv64gc-unknown-linux-gnu
+          - powerpc-unknown-linux-gnu
+          - powerpc64-unknown-linux-gnu
+          - powerpc64le-unknown-linux-gnu
+          - riscv64gc-unknown-linux-gnu
           #- s390x-unknown-linux-gnu
           #- sparc64-unknown-linux-gnu
           #- thumbv7neon-unknown-linux-gnueabihf
-          # - x86_64-unknown-linux-gnu
+          - x86_64-unknown-linux-gnu
           #- x86_64-unknown-linux-gnux32
     steps:
       # Checkout
