--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,17 +7,17 @@ on:
 jobs:
   build-web:
     uses: ./.github/workflows/build-web.yml
-  build-musl:
-    needs:
-      - build-web
-    uses: ./.github/workflows/build-musl.yml
+  # build-musl:
+  #   needs:
+  #     - build-web
+  #   uses: ./.github/workflows/build-musl.yml
   build-gnu:
     needs:
       - build-web
     uses: ./.github/workflows/build-gnu.yml
   build-other:
     needs:
-      - build-musl
+      # - build-musl
       - build-gnu
     uses: ./.github/workflows/build-other.yml
 
