--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -41,9 +41,9 @@ jobs:
 
       # Musl gcc
       - name: Download musl gcc
-      - env:
+        env:
           target: ${{ matrix.target }}
-      - run: |
+        run: |
           if ! test -d /opt/arm-linux-musleabi-cross/bin; then
             wget https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabi-cross.tgz
             tar -xvf arm-linux-musleabi-cross.tgz
