--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,12 +11,12 @@ jobs:
     needs:
       - build-web
     uses: ./.github/workflows/build-musl.yml
-  #build-gnu:
-  #  needs:
-  #    - build-web
-  #  uses: ./.github/workflows/build-gnu.yml
+  build-gnu:
+    needs:
+      - build-web
+    uses: ./.github/workflows/build-gnu.yml
   build-other:
     needs:
       - build-musl
-      #- build-gnu
+      - build-gnu
     uses: ./.github/workflows/build-other.yml
